*SVN*

* Set the original button value in an attribute of the button when using the :disable_with key with submit_tag, so that the original can be restored later. [Jamis Buck]

* session_enabled? works with session :off.  #6680 [Catfish]

* Added :port and :host handling to UrlRewriter (which unified url_for usage, regardless of whether it's called in view or controller) #7616 [alancfrancis]

* Allow send_file/send_data to use a registered mime type as the :type parameter #7620 [jonathan]

* Allow routing requirements on map.resource(s) #7633 [quixoten]. Example:

  map.resources :network_interfaces, :requirements => { :id => /^\d+\.\d+\.\d+\.\d+$/ }

* Cookie session store: empty and unchanged sessions don't write a cookie.  [Jeremy Kemper]

* Added helper(:all) as a way to include all helpers from app/helpers/**/*.rb in ApplicationController [DHH]

* Integration tests: introduce methods for other HTTP methods.  #6353 [caboose]

* Routing: better support for escaped values in route segments.  #7544 [Chris
Roos]

* Introduce a cookie-based session store as the Rails default. Sessions typically contain at most a user_id and flash message; both fit within the 4K cookie size limit. A secure message digest is included with the cookie to ensure data integrity (a user cannot alter his user_id without knowing the secret key included in the digest). If you have more than 4K of session data or don't want your data to be visible to the user, pick another session store.  Cookie-based sessions are dramatically faster than the alternatives.   [Jeremy Kemper]

  Example config/environment.rb:
    # Use an application-wide secret key and the default SHA1 message digest.
    config.action_controller.session = { :secret => "can't touch this" }

    # Store a secret key per user and employ a stronger message digest.
    config.action_controller.session = {
      :digest => 'SHA512',
      :secret => Proc.new { User.current.secret_key }
    }
