@@ -1,5 +1,7 @@
 *SVN*
 
+* Fixed that FormTagHelper#text_area_tag should disregard :size option if it's not a string [Brendon Davidson]
+
 * Set the original button value in an attribute of the button when using the :disable_with key with submit_tag, so that the original can be restored later. [Jamis Buck]
 
 * session_enabled? works with session :off.  #6680 [Catfish]
